add experimental spectra

--- a/chalconeproject.tex
+++ b/chalconeproject.tex
@@ -34,7 +34,7 @@ Malaria remains a major public health issue with nearly 230 million cases estima
 \end{figure}
 \bf{Procedure.} Benzaldehyde (10.4 g, 98.0 mmol) was added to a 250 mL round bottom flask and cooled to 0°C, followed by addition of sulfuric acid (30 mL). To this solution, nitric acid (7 mL) was added dropwise over 10 minutes, and allowed to stir for 10 minutes. Reaction progress was monitored with TLC (9:1 hexanes:EtOAc). When the reaction was complete, the reaction mixture was quenched with ice (\textasciitilde 50 mL), the crude product was filtered by vacuum, and recrystallized from isopropanol.
 
-\noindent\bf{3-nitrobenzaldehyde:} yellow crystals. Hexanes:EtOAc 9:1 R\textsubscript{f} = 0.43. \bf{$^1$H-NMR} (400 MHz, CDCl$_3$): \textdelta\hspace{0mm} 7.761 - 7.801 (t, 1H), 8.236 - 8.256 (d, 1H), 8.487 - 8.516 (dq, 1H), 8.728 (s, 1H), 10.134 (s, 1H). \bf{IR} (neat): 3069, 2980, 2882, 1698, 1523, 1346, 1198 cm$^{-1}$ \bf{UV-Vis:} \textlambda\textsubscript{max} = 220 nm. \bf{MP:} 47.6\degree C. \bf{Yield:} (7.901 g, 53.35\%).
+\noindent\bf{3-nitrobenzaldehyde:} yellow crystals. Hexanes:EtOAc 9:1 R\textsubscript{f} = 0.43. \bf{$^1$H-NMR} (400 MHz, CDCl$_3$): \textdelta\hspace{0mm} 7.761 - 7.801 (t, 1H), 8.236 - 8.256 (d, 1H), 8.487 - 8.516 (dq, 1H), 8.728 (s, 1H), 10.134 (s, 1H). \bf{IR} (neat): 3069, 2981, 2884, 1698, 1523, 1348, 1198 cm$^{-1}$ \bf{UV-Vis:} \textlambda\textsubscript{max} = 220 nm. \bf{MP:} 47.6\degree C. \bf{Yield:} (7.901 g, 53.35\%).
 
 \begin{figure}[ht]
     \centering
@@ -52,8 +52,13 @@ Malaria remains a major public health issue with nearly 230 million cases estima
 \end{figure}
 \noindent\bf{Prodedure.}
 
+\noindent\bf{3-(3-nitrophenyl)-1-phenylprop-2-en-1-one:} light green powder. \bf{$^1$H-NMR} (400 MHz): \textdelta\hspace{0mm} 7.527 - 7.564 (t, 2H), 7.608 - 7.644 (t, 2H), 7.648 - 7.684 (d, 1H), 7.823 - 7.863 (d, 1H), 7.922 - 7.941 (d, 1H), 8.043 - 8.067 (d, 2H), 8.259 - 8.282 (dq, 1H), 8.519 - 8.528 (t, 1H). \bf{IR} (neat): 3071, 1659, 1606, 1526, 1446, 1349, 1217 cm$^{-1}$. \bf{UV-Vis:} \textlambda\textsubscript{max} = 237 nm. \bf{Yield:} (1.989 g, \%)
+
+\noindent\bf{1-(4-methoxyphenyl)-3-(3-nitrophenyl)prop-2-en-1-one:} blue-green powder. \bf{$^1$H-NMR} (400 MHz): \textdelta\hspace{0mm} 3.914 (s, 3H), 7.005 - 7.027 (d, 2H), 7.596 - 7.636 (t, 1H), 7.648 - 7.687 (d, 1H), 7.806 - 7.846 (d, 1H), 7.906 - 7.925 (d, 1H), 8.061 - 8.083 (d, 2H), 8.239 - 8.268 (dq, 1H), 8.515 - 8.524 (t, 1H). \bf{IR} (neat): 3357, 2981, 2888, 1662, 1595, 1521, 1339, 1258, 1167 cm$^{-1}$. \bf{UV-Vis:} \textlambda\textsubscript{max} = 322 nm. \bf{Yield:} (847 mg, \%)
+
 \newpage
 \subsection*{APPENDIX A: SPECTRA}
+%%% NMR SPECTRA %%%
 \begin{figure}[h]
     \centering
     \includegraphics[scale=0.105]{spectra/nmr4.1.png}
@@ -63,6 +68,68 @@ Malaria remains a major public health issue with nearly 230 million cases estima
     \centering
     \includegraphics[scale=0.105]{spectra/nmr5.1.png}
     \caption{1-(4-methoxyphenyl)ethan-1-one NMR}
+\end{figure}
+
+\newpage
+\begin{figure}[H]
+    \centering
+    \includegraphics[scale=0.105]{spectra/nmr7.1.png}
+    \caption{3-(3-nitrophenyl)-1-phenylprop-2-en-1-one NMR}
+\end{figure}
+\begin{figure}[H]
+    \centering
+    \includegraphics[scale=0.105]{spectra/nmr7.2.png}
+    \caption{1-(4-methoxyphenyl)-3-(3-nitrophenyl)prop-2-en-1-one NMR}
+\end{figure}
+
+\newpage
+%%% IR SPECTRA %%%
+\begin{figure}[H]
+    \centering
+    \includegraphics[scale=0.234]{spectra/ir4.1.png}
+    \caption{3-nitrobenzaldehyde IR}
+\end{figure}
+\begin{figure}[H]
+    \centering
+    \includegraphics[scale=0.234]{spectra/ir5.1.png}
+    \caption{1-(4-methoxyphenyl)ethan-1-one IR}
+\end{figure}
+
+\newpage
+\begin{figure}[H]
+    \centering
+    \includegraphics[scale=0.234]{spectra/ir7.1.png}
+    \caption{3-(3-nitrophenyl)-1-phenylprop-2-en-1-one IR}
+\end{figure}
+\begin{figure}[H]
+    \centering
+    \includegraphics[scale=0.234]{spectra/ir7.2.png}
+    \caption{1-(4-methoxyphenyl)-3-(3-nitrophenyl)prop-2-en-1-one IR}
+\end{figure}
+
+\newpage
+%%% UV-VIS SPECTRA %%%
+\begin{figure}[H]
+    \centering
+    \includegraphics[scale=0.234]{spectra/uvvis4.1.png}
+    \caption{3-nitrobenzaldehyde UV-Vis}    
+\end{figure}
+\begin{figure}[H]
+    \centering
+    \includegraphics[scale=0.234]{spectra/uvvis5.1.png}
+    \caption{1-(4-methoxyphenyl)ethan-1-one UV-Vis}    
+\end{figure}
+
+\newpage
+\begin{figure}[H]
+    \centering
+    \includegraphics[scale=0.234]{spectra/uvvis7.1.png}
+    \caption{3-(3-nitrophenyl)-1-phenylprop-2-en-1-one UV-Vis}
+\end{figure}
+\begin{figure}[H]
+    \centering
+    \includegraphics[scale=0.234]{spectra/uvvis7.2.png}
+    \caption{1-(4-methoxyphenyl)-3-(3-nitrophenyl)prop-2-en-1-one UV-Vis}
 \end{figure}
 
 \newpage
