fix reference title

--- a/chalconeproject.tex
+++ b/chalconeproject.tex
@@ -20,6 +20,8 @@
 \linespread{1.25}
 \raggedright
 \setlength{\parskip}{6pt}
+\def\citenumfont{\textit}
+\renewcommand{\bibsection}{}
 
 \section*{(Chalcone Project)}
 
@@ -59,6 +61,7 @@ Malaria remains a major public health issue with nearly 230 million cases estima
 
 \noindent\bf{1-(4-methoxyphenyl)-3-(3-nitrophenyl)prop-2-en-1-one:} blue-green powder. \bf{$^1$H-NMR} (400 MHz): \textdelta\hspace{0mm} 3.914 (s, 3H), 7.005 - 7.027 (d, 2H), 7.596 - 7.636 (t, 1H), 7.648 - 7.687 (d, 1H), 7.806 - 7.846 (d, 1H), 7.906 - 7.925 (d, 1H), 8.061 - 8.083 (d, 2H), 8.239 - 8.268 (dq, 1H), 8.515 - 8.524 (t, 1H). \bf{IR} (neat): 3357, 2981, 2888, 1662, 1595, 1521, 1339, 1258, 1167 cm$^{-1}$. \bf{UV-Vis:} \textlambda\textsubscript{max} = 322 nm. \bf{Yield:} (847 mg, 59.92\%)
 
+%%% REFERENCES %%%
 \newpage
 \subsection*{REFERENCES}
 \bibliography{references}
