--- a/chalconeproject.tex
+++ b/chalconeproject.tex
@@ -1,8 +1,9 @@
-\documentclass[12pt]{article}
+\documentclass[11pt]{article}
 \usepackage[margin=1in]{geometry}
 \usepackage{textcomp}
 \usepackage{gensymb}
 \usepackage{graphicx}
+\usepackage{caption}
 \usepackage{epstopdf}
 \usepackage{textgreek}
 \usepackage{titlesec}
@@ -19,7 +20,9 @@
 \begin{document}
 \linespread{1.25}
 \raggedright
-\setlength{\parskip}{6pt}
+\setlength{\parskip}{2pt}
+\setlength{\belowcaptionskip}{-8pt}
+%\captionsetup{belowskip=0pt}
 \def\citenumfont{\textit}
 \renewcommand{\bibsection}{}
 
@@ -28,7 +31,7 @@
 David Behrle
 
 \subsection*{INTRODUCTION}
-Malaria remains a major public health issue with nearly 230 million cases estimated worldwide in 2019, the vast majority of which were reported in Africa owing to infection by protozoan parasites in the genus $Plasmodium$, most notably $Plasmodium\; falciparum$.\cite{Fikadu2023} Historically, chloroquine and its derivatives have been used to treat malaria however, the emergence of chloroquine-resistant strains of $P.\; falciparum$ has greatly decreased the efficacy of these treatments creating an urgent need for alternative antimalarial compounds.\cite{Fikadu2023,Yadav2012} Chalcones are a class of \textalpha,\textbeta-unsaturated ketones belonging to the flavonoid family which remain of significant interest due to their relatively simple synthetic chemistry and diverse application as scaffolds in medicinal chemistry.\cite{Qin2020} Discovery of the antimalarial activity of the naturally occuring chalcone Licochalcone A, originally isolated from Chinese licorice roots, has prompted research into chalcones and chalcone hybrids as antimalarial candidates.\cite{Cheng2020,Chen1994} Hybridization has been explored as a method for overcoming drug resistance in $P.\; falciparum$, this is supported by the observation that many chloroquine derivatives and analogs retain activity against chloroquine-resistant strains of $P.\; falciparum$.\cite{Cheng2020,Sashidhara2012} Chloroquine-chalcone based hybrids have been shown to have potent antimalarial activity against chloroquine-resistant $P.\; falciparum$ in vitro when compared with chloroquine.\cite{Sashidhara2012} Likewise, triazole linked chalcones, ferrocenyl chalcones, and caffeine based chalcones among others have been evaluated as potential antimalarial, antitrypanosomal, antileishmanial, and antiplasmodial agents.\cite{Qin2020,Singh2017,Insuasty2015} Structure-activity relationship studies of various chalcone derivatives have shown that different structural requirements exist for antimalarial and antileishmanial activity respectively, with the A ring being more significant in antileishmanial activity compared with antimalarial activity in which both A and B rings are important.\cite{Liu2003} Stereoisomerism has also been shown to have an effect on the antimalarial activity of chalcone derivatives. Synthesis and evaluation of conformationally restricted derivatives of known antiplasmodial chalcones has demonstrated that Z-locked chalcone derivatives are effectively inactive while E-locked analogs show equivalent activity and potency to the parent chalcone.\cite{Larsen2005} Chalcone derivatives lacking the \textalpha,\textbeta-unsaturated ketone bridge exhibit significantly less antimalarial activity, with saturated analogs showing a 10-fold decrease in antimalarial activity.\cite{Li1995}
+Malaria remains a major public health issue with nearly 230 million cases estimated worldwide in 2019, the vast majority of which were reported in Africa owing to infection by protozoan parasites in the genus $Plasmodium$, most notably $Plasmodium\; falciparum$.\cite{Fikadu2023} Historically, chloroquine and its derivatives have been used to treat malaria however, the emergence of chloroquine-resistant strains of $P.\; falciparum$ has greatly decreased the efficacy of these treatments creating an urgent need for alternative antimalarial compounds.\cite{Fikadu2023,Yadav2012} Chalcones are a class of \textalpha,\textbeta-unsaturated ketones belonging to the flavonoid family which remain of significant interest due to their relatively simple synthetic chemistry and diverse application as scaffolds in medicinal chemistry.\cite{Qin2020} Discovery of the antimalarial activity of the naturally occuring chalcone Licochalcone A, originally isolated from Chinese licorice roots, has prompted research into chalcones and chalcone hybrids as antimalarial candidates.\cite{Cheng2020,Chen1994} Hybridization has been explored as a method for overcoming drug resistance in $P.\; falciparum$, this is supported by the observation that many chloroquine derivatives and analogs retain activity against chloroquine-resistant strains of $P.\; falciparum$.\cite{Cheng2020,Sashidhara2012} Chloroquine-chalcone based hybrids have been shown to have potent antimalarial activity against chloroquine-resistant $P.\; falciparum$ in vitro when compared with chloroquine.\cite{Sashidhara2012} Likewise, triazole linked chalcones, ferrocenyl chalcones, and caffeine based chalcones among others have been evaluated as potential antimalarial, antitrypanosomal, antileishmanial, and antiplasmodial agents.\cite{Qin2020,Singh2017,Insuasty2015} Structure-activity relationship studies of various chalcone derivatives have shown that different structural requirements exist for antimalarial and antileishmanial activity respectively, with the A ring being more significant in antileishmanial activity compared with antimalarial activity in which both A and B rings are important.\cite{Liu2003} Stereoisomerism has also been shown to have an effect on the antimalarial activity of chalcone derivatives. Synthesis and evaluation of conformationally restricted derivatives of known antiplasmodial chalcones has demonstrated that Z-locked chalcone derivatives are effectively inactive while E-locked analogs show equivalent activity and potency to the parent chalcone.\cite{Larsen2005} Chalcone derivatives lacking the \textalpha,\textbeta-unsaturated ketone bridge exhibit significantly less antimalarial activity, with saturated analogs showing a 10-fold decrease in antimalarial activity.\cite{Li1995} In this paper, we report the synthesis of the chalcones, 3'-nitrochalcone and 4-methoxy-3'-nitrochalcone.
 \subsection*{METHODS AND RESULTS}
 \bf{Instrumentation.} Nuclear magnetic resonance (NMR) spectra were recorded on a Bruker Ultrashield™ (CDCl$_3$, 400 MHz) calibrated using deuterated solvent (CDCl$_3$: $^1$H NMR: 7.26 ppm). IR spectra were recorded on a Nicolet Summit™ FTIR spectrometer. UV-Vis spectra were recorded on a Vernier Fluorescence/UV-Vis spectrophotometer.
 
