change figure labeling

--- a/chalconeproject.tex
+++ b/chalconeproject.tex
@@ -38,7 +38,8 @@ Malaria remains a major public health issue with nearly 230 million cases estima
 \begin{figure}[H]
     \centering
     \includegraphics[scale=0.8]{schemes/nitration.eps}
-    \caption{Nitration of benzaldehyde}
+    \captionsetup{labelformat=empty}
+    \caption{Scheme 1: Nitration of benzaldehyde}
 \end{figure}
 \bf{Procedure.} Benzaldehyde (10.4 g, 98.0 mmol) was added to a 250 mL round bottom flask and cooled to 0°C, followed by addition of sulfuric acid (30 mL). To this solution, nitric acid (7 mL) was added dropwise over 10 minutes, and allowed to stir for 10 minutes. Reaction progress was monitored with TLC (9:1 hexanes:EtOAc). When the reaction was complete, the reaction mixture was quenched with ice (\textasciitilde 50 mL), the crude product was filtered by vacuum, and recrystallized from isopropanol.
 
@@ -47,7 +48,8 @@ Malaria remains a major public health issue with nearly 230 million cases estima
 \begin{figure}[ht]
     \centering
     \includegraphics[scale=0.8]{schemes/acetylation.eps}
-    \caption{Acetylation of anisole}
+    \captionsetup{labelformat=empty}
+    \caption{Scheme 2: Acetylation of anisole}
 \end{figure}
 \noindent\bf{Procedure.} Aluminum chloride (14 g) in DCM (15.0 mL) was added to a 250 mL two-necked round bottom flask and cooled to 0\degree C, followed by dropwise addition of acetyl chloride (9.27 g, 118 mmol) in DCM (10.0 mL) over 10 minutes with magnetic stirring. To the resulting mixture was added anisole (10.0 g, 93.9 mmol) dropwise over 30 minutes. Reaction progress was monitored using TLC (9:1 hexanes:EtOAc). When the reaction was completed, the reaction mixture was quenched in a beaker containing ice (\textasciitilde 30 mL) and hydrochloric acid (10 mL), then neutralized with saturated sodium bicarbonate. The resulting mixture was extracted with saturated sodium bicarbonate (2x1 vol.), washed with brine (1 vol.), dried with anhydrous sodium sulfate, and the solvent was evaporated under reduced pressure.
 
@@ -56,7 +58,9 @@ Malaria remains a major public health issue with nearly 230 million cases estima
 \begin{figure}[H]
     \centering
     \includegraphics[scale=0.8]{schemes/chalcone.eps}
-    \caption{Aldol condensation of benzaldehyde and acetophenone}
+    \captionsetup{labelformat=empty}
+    %\caption{Scheme 3: Aldol condensation of benzaldehyde and acetophenone}
+    \caption{Scheme 3: Formation of chalcone}
 \end{figure}
 \noindent\bf{Prodedure.} To a 150 mL Erlenmeyer flask was added 3-nitrobenzaldehyde (0.76 g, 5.0 mmol) followed by the acetophenone (5.0 mmol) and 95\% EtOH (4 mL). Once all the solid was dissolved, NaOH solution (0.5 mL) was added with constant stirring until the mixture solidified. After 5 minutes of additional stirring, the resulting solid was quenched with ice water (\textasciitilde 10 mL), filtered by vacuum, and recrystallized from hot 95\% EtOH.
 
@@ -64,11 +68,15 @@ Malaria remains a major public health issue with nearly 230 million cases estima
 
 \noindent\bf{1-(4-methoxyphenyl)-3-(3-nitrophenyl)prop-2-en-1-one:} blue-green powder. \bf{$^1$H-NMR} (400 MHz): \textdelta\hspace{0mm} 3.914 (s, 3H), 7.005 - 7.027 (d, 2H), 7.596 - 7.636 (t, 1H), 7.648 - 7.687 (d, 1H), 7.806 - 7.846 (d, 1H), 7.906 - 7.925 (d, 1H), 8.061 - 8.083 (d, 2H), 8.239 - 8.268 (dq, 1H), 8.515 - 8.524 (t, 1H). \bf{IR} (neat): 3357, 2981, 2888, 1662, 1595, 1521, 1339, 1258, 1167 cm$^{-1}$. \bf{UV-Vis:} \textlambda\textsubscript{max} = 322 nm. \bf{Yield:} (847 mg, 59.92\%)
 
+\subsection*{DISCUSSION}
+
 %%% REFERENCES %%%
 \newpage
 \subsection*{REFERENCES}
+\vspace{2mm}
 \bibliography{references}
 
+\setcounter{figure}{0}
 \newpage
 \subsection*{APPENDIX A: SPECTRA}
 %%% NMR SPECTRA %%%
