--- a/chalconeproject.tex
+++ b/chalconeproject.tex
@@ -31,7 +31,7 @@
 David Behrle
 
 \subsection*{INTRODUCTION}
-Malaria remains a major public health issue with nearly 230 million cases estimated worldwide in 2019, the vast majority of which were reported in Africa owing to infection by protozoan parasites in the genus $Plasmodium$, most notably $Plasmodium\; falciparum$.\cite{Fikadu2023} Historically, chloroquine and its derivatives have been used to treat malaria however, the emergence of chloroquine-resistant strains of $P.\; falciparum$ has greatly decreased the efficacy of these treatments creating an urgent need for alternative antimalarial compounds.\cite{Fikadu2023,Yadav2012} Chalcones are a class of \textalpha,\textbeta-unsaturated ketones belonging to the flavonoid family which remain of significant interest due to their relatively simple synthetic chemistry and diverse application as scaffolds in medicinal chemistry.\cite{Qin2020} Discovery of the antimalarial activity of the naturally occuring chalcone Licochalcone A, originally isolated from Chinese licorice roots, has prompted research into chalcones and chalcone hybrids as antimalarial candidates.\cite{Cheng2020,Chen1994} Hybridization has been explored as a method for overcoming drug resistance in $P.\; falciparum$, this is supported by the observation that many chloroquine derivatives and analogs retain activity against chloroquine-resistant strains of $P.\; falciparum$.\cite{Cheng2020,Sashidhara2012} Chloroquine-chalcone based hybrids have been shown to have potent antimalarial activity against chloroquine-resistant $P.\; falciparum$ in vitro when compared with chloroquine.\cite{Sashidhara2012} Likewise, triazole linked chalcones, ferrocenyl chalcones, and caffeine based chalcones among others have been evaluated as potential antimalarial, antitrypanosomal, antileishmanial, and antiplasmodial agents.\cite{Qin2020,Singh2017,Insuasty2015} Structure-activity relationship studies of various chalcone derivatives have shown that different structural requirements exist for antimalarial and antileishmanial activity respectively, with the A ring being more significant in antileishmanial activity compared with antimalarial activity in which both A and B rings are important.\cite{Liu2003} Stereoisomerism has also been shown to have an effect on the antimalarial activity of chalcone derivatives. Synthesis and evaluation of conformationally restricted derivatives of known antiplasmodial chalcones has demonstrated that Z-locked chalcone derivatives are effectively inactive while E-locked analogs show equivalent activity and potency to the parent chalcone.\cite{Larsen2005} Chalcone derivatives lacking the \textalpha,\textbeta-unsaturated ketone bridge exhibit significantly less antimalarial activity, with saturated analogs showing a 10-fold decrease in antimalarial activity.\cite{Li1995} In this paper, we report the synthesis of the chalcones, 3'-nitrochalcone and 4-methoxy-3'-nitrochalcone.
+Malaria remains a major public health issue with nearly 230 million cases estimated worldwide in 2019, the vast majority of which were reported in Africa owing to infection by protozoan parasites in the genus $Plasmodium$, most notably $Plasmodium\; falciparum$.\cite{Fikadu2023} Historically, chloroquine and its derivatives have been used to treat malaria however, the emergence of chloroquine-resistant strains of $P.\; falciparum$ has greatly decreased the efficacy of these treatments creating an urgent need for alternative antimalarial compounds.\cite{Fikadu2023,Yadav2012} Chalcones are a class of \textalpha,\textbeta-unsaturated ketones belonging to the flavonoid family which remain of significant interest due to their relatively simple synthetic chemistry and diverse application as scaffolds in medicinal chemistry.\cite{Qin2020} Discovery of the antimalarial activity of the naturally occuring chalcone Licochalcone A, originally isolated from Chinese licorice roots, has prompted research into chalcones and chalcone hybrids as antimalarial candidates.\cite{Cheng2020,Chen1994} Hybridization has been explored as a method for overcoming drug resistance in $P.\; falciparum$, this is supported by the observation that many chloroquine derivatives and analogs retain activity against chloroquine-resistant strains of $P.\; falciparum$.\cite{Cheng2020,Sashidhara2012} Chloroquine-chalcone based hybrids have been shown to have potent antimalarial activity against chloroquine-resistant $P.\; falciparum$ in vitro when compared with chloroquine.\cite{Sashidhara2012} Likewise, triazole linked chalcones, ferrocenyl chalcones, and caffeine based chalcones among others have been evaluated as potential antimalarial, antitrypanosomal, antileishmanial, and antiplasmodial agents.\cite{Qin2020,Singh2017,Insuasty2015} Structure-activity relationship studies of various chalcone derivatives have shown that different structural requirements exist for antimalarial and antileishmanial activity respectively, with the A ring being more significant in antileishmanial activity compared with antimalarial activity in which both A and B rings are important.\cite{Liu2003} Stereoisomerism has also been shown to have an effect on the antimalarial activity of chalcone derivatives. Synthesis and evaluation of conformationally restricted derivatives of known antiplasmodial chalcones has demonstrated that Z-locked chalcone derivatives are effectively inactive while E-locked analogs show equivalent activity and potency to the parent chalcone.\cite{Larsen2005} Chalcone derivatives lacking the \textalpha,\textbeta-unsaturated ketone bridge exhibit significantly less antimalarial activity, with saturated analogs showing a 10-fold decrease in antimalarial activity.\cite{Li1995} In this paper, we report the synthesis of the chalcones, 3'-nitrochalcone and 4-methoxy-3'-nitrochalcone. This contributes to the current knowledge of chalcone synthesis and provides a simple and versatile method for the synthesis of potentially antimalarial substituted chalcones.
 \subsection*{METHODS AND RESULTS}
 \bf{Instrumentation.} Nuclear magnetic resonance (NMR) spectra were recorded on a Bruker Ultrashield™ (CDCl$_3$, 400 MHz) calibrated using deuterated solvent (CDCl$_3$: $^1$H NMR: 7.26 ppm). IR spectra were recorded on a Nicolet Summit™ FTIR spectrometer. UV-Vis spectra were recorded on a Vernier Fluorescence/UV-Vis spectrophotometer.
 
@@ -69,6 +69,10 @@ Malaria remains a major public health issue with nearly 230 million cases estima
 \noindent\bf{1-(4-methoxyphenyl)-3-(3-nitrophenyl)prop-2-en-1-one:} blue-green powder. \bf{$^1$H-NMR} (400 MHz): \textdelta\hspace{0mm} 3.914 (s, 3H), 7.005 - 7.027 (d, 2H), 7.596 - 7.636 (t, 1H), 7.648 - 7.687 (d, 1H), 7.806 - 7.846 (d, 1H), 7.906 - 7.925 (d, 1H), 8.061 - 8.083 (d, 2H), 8.239 - 8.268 (dq, 1H), 8.515 - 8.524 (t, 1H). \bf{IR} (neat): 3357, 2981, 2888, 1662, 1595, 1521, 1339, 1258, 1167 cm$^{-1}$. \bf{UV-Vis:} \textlambda\textsubscript{max} = 322 nm. \bf{Yield:} (847 mg, 59.92\%)
 
 \subsection*{DISCUSSION}
+\bf{3-nitrobenzaldehyde.} \\
+\bf{1-(4-methoxyphenyl)ethan-1-one.} \\
+\bf{3-(3-nitrophenyl)-1-phenylprop-2-en-1-one.} The final yield was 1.989 g, corresponding to a percent yield of 158.3\%. The inflated yield of $>$ 100\% indicated that the final product was not dried sufficiently after recrystallization. This was reinforced by the appearance of solvent peaks corresponding to ethanol in the NMR spectrum (quartet at 3.72 ppm, singlet at 2.62 ppm, and triplet at 1.24 ppm), and broad O-H stretching peak centered at 3357 cm$^{-1}$ in the IR spectrum. Conversion of the starting materials was supported by the lack of the singlet aldehyde C-H peak at 10.13 ppm in the NMR spectrum and lack of the aldehyde H-C=O: C-H stretch at 2981 cm$^{-1}$ in the recorded IR spectrum \\
+\bf{1-(4-methoxyphenyl)-3-(3-nitrophenyl)prop-2-en-1-one.} The final yield was 847 g, corresponding to a percent yield of 59.92\%. After the initial recrystallization of the final product, a brown impurity was observed which did not clear after washing on the filter with chilled ethanol. The product was then recrystallized a second time from ethanol; product loss from which could potentially account for the lower than expected yield. The experimental NMR spectrum obtained indicated the conversion of the starting materials, evident by the lack of the singlet peaks at 10.13 and 2.54 ppm corresponding to the aldehyde C-H and terminal CH$_3$ of the acetyl group in 3-nitrobenzaldehyde and 4-methoxyacetophenone respectively. The formation of the final product was also indicated by the fact that the measured \textlambda\textsubscript{max} value was higher than those of either starting material (322 nm vs 270 nm \& 220 nm) indicating a greater degree of conjugation in the product than either of the starting materials.
 
 %%% REFERENCES %%%
 \newpage
