--- a/chalconeproject.tex
+++ b/chalconeproject.tex
@@ -26,7 +26,7 @@
 \def\citenumfont{\textit}
 \renewcommand{\bibsection}{}
 
-\section*{(Chalcone Project)}
+\section*{Synthesis of Substituted Chalcones by Aldol Condensation: \\ A Preliminary Step in Antimalarial Drug Development}
 
 David Behrle
 
@@ -66,13 +66,16 @@ Malaria remains a major public health issue with nearly 230 million cases estima
 
 \noindent\bf{3-(3-nitrophenyl)-1-phenylprop-2-en-1-one:} light green powder. \bf{$^1$H-NMR} (400 MHz): \textdelta\hspace{0mm} 7.527 - 7.564 (t, 2H), 7.608 - 7.644 (t, 2H), 7.648 - 7.684 (d, 1H), 7.823 - 7.863 (d, 1H), 7.922 - 7.941 (d, 1H), 8.043 - 8.067 (d, 2H), 8.259 - 8.282 (dq, 1H), 8.519 - 8.528 (t, 1H). \bf{IR} (neat): 3071, 1659, 1606, 1526, 1446, 1349, 1217 cm$^{-1}$. \bf{UV-Vis:} \textlambda\textsubscript{max} = 237 nm. \bf{Yield:} (1.989 g, 158.3\%)
 
-\noindent\bf{1-(4-methoxyphenyl)-3-(3-nitrophenyl)prop-2-en-1-one:} blue-green powder. \bf{$^1$H-NMR} (400 MHz): \textdelta\hspace{0mm} 3.914 (s, 3H), 7.005 - 7.027 (d, 2H), 7.596 - 7.636 (t, 1H), 7.648 - 7.687 (d, 1H), 7.806 - 7.846 (d, 1H), 7.906 - 7.925 (d, 1H), 8.061 - 8.083 (d, 2H), 8.239 - 8.268 (dq, 1H), 8.515 - 8.524 (t, 1H). \bf{IR} (neat): 3357, 2981, 2888, 1662, 1595, 1521, 1339, 1258, 1167 cm$^{-1}$. \bf{UV-Vis:} \textlambda\textsubscript{max} = 322 nm. \bf{Yield:} (847 mg, 59.92\%)
+\noindent\bf{1-(4-methoxyphenyl)-3-(3-nitrophenyl)prop-2-en-1-one:} blue-green powder. \bf{$^1$H-NMR} (400 MHz): \textdelta\hspace{0mm} 3.914 (s, 3H), 7.005 - 7.027 (d, 2H), 7.596 - 7.636 (t, 1H), 7.648 - 7.687 (d, 1H), 7.806 - 7.846 (d, 1H), 7.906 - 7.925 (d, 1H), 8.061 - 8.083 (d, 2H), 8.239 - 8.268 (dq, 1H), 8.515 - 8.524 (t, 1H). \bf{IR} (neat): 3357, 2981, 2888, 1662, 1595, 1521, 1339, 1258, 1167 cm$^{-1}$. \bf{UV-Vis:} \textlambda\textsubscript{max} = 322 nm. \bf{Yield:} (847 mg, 59.92\%).
 
 \subsection*{DISCUSSION}
-\bf{3-nitrobenzaldehyde.} \\
-\bf{1-(4-methoxyphenyl)ethan-1-one.} \\
-\bf{3-(3-nitrophenyl)-1-phenylprop-2-en-1-one.} The final yield was 1.989 g, corresponding to a percent yield of 158.3\%. The inflated yield of $>$ 100\% indicated that the final product was not dried sufficiently after recrystallization. This was reinforced by the appearance of solvent peaks corresponding to ethanol in the NMR spectrum (quartet at 3.72 ppm, singlet at 2.62 ppm, and triplet at 1.24 ppm), and broad O-H stretching peak centered at 3357 cm$^{-1}$ in the IR spectrum. Conversion of the starting materials was supported by the lack of the singlet aldehyde C-H peak at 10.13 ppm in the NMR spectrum and lack of the aldehyde H-C=O: C-H stretch at 2981 cm$^{-1}$ in the recorded IR spectrum \\
-\bf{1-(4-methoxyphenyl)-3-(3-nitrophenyl)prop-2-en-1-one.} The final yield was 847 g, corresponding to a percent yield of 59.92\%. After the initial recrystallization of the final product, a brown impurity was observed which did not clear after washing on the filter with chilled ethanol. The product was then recrystallized a second time from ethanol; product loss from which could potentially account for the lower than expected yield. The experimental NMR spectrum obtained indicated the conversion of the starting materials, evident by the lack of the singlet peaks at 10.13 and 2.54 ppm corresponding to the aldehyde C-H and terminal CH$_3$ of the acetyl group in 3-nitrobenzaldehyde and 4-methoxyacetophenone respectively. The formation of the final product was also indicated by the fact that the measured \textlambda\textsubscript{max} value was higher than those of either starting material (322 nm vs 270 nm \& 220 nm) indicating a greater degree of conjugation in the product than either of the starting materials.
+\bf{3-nitrobenzaldehyde.} The final yield was 7.901 g, corresponding to a 53.35\% yield. The experimental NMR spectra showed two doublets at 8.25 and 8.50 ppm, as well as a triplet at 7.78 ppm and a singlet at 8.73 ppm, indicating \textit{meta} substitution. The experimental IR spectrum showed two strong N-O stretching peaks at 1523 and 1346 cm$^{-1}$. \vspace{2pt}\\
+\bf{1-(4-methoxyphenyl)ethan-1-one.} The final yield was 9.247 g, corresponding to a percent yield of 66.24\%. The experimental NMR spectrum showed two singlet peaks at 2.54 and 3.85 ppm corresponding to the terminal CH$_3$ groups of the acetyl and methoxy groups respectively as well as two doublet peaks at 6.92 and 7.92 confirming \textit{para} disubstitution. The experimental IR spectrum also confirmed the transformation of the starting material with a strong C=O stretching peak at 1671 cm$^{-1}$. \vspace{2pt}\\
+\bf{3-(3-nitrophenyl)-1-phenylprop-2-en-1-one.} The final yield was 1.989 g, corresponding to a percent yield of 158.3\%. The inflated yield of $>$ 100\% indicated that the final product was not dried sufficiently after recrystallization. This was reinforced by the appearance of solvent peaks corresponding to ethanol in the NMR spectrum (quartet at 3.72 ppm, singlet at 2.62 ppm, and triplet at 1.24 ppm), and broad O-H stretching peak centered at 3357 cm$^{-1}$ in the IR spectrum. Conversion of the starting materials was supported by the lack of the singlet aldehyde C-H peak at 10.13 ppm in the NMR spectrum and lack of the aldehyde H-C=O: C-H stretch at 2981 cm$^{-1}$ in the recorded IR spectrum. \vspace{2pt}\\
+\bf{1-(4-methoxyphenyl)-3-(3-nitrophenyl)prop-2-en-1-one.} The final yield was 847 g, corresponding to a percent yield of 59.92\%. After the initial recrystallization of the final product, a brown impurity was observed which did not clear after washing on the filter with chilled ethanol. The product was then recrystallized a second time from ethanol; product loss from which could potentially account for the lower than expected yield. The experimental NMR spectrum obtained indicated the conversion of the starting materials, evident by the lack of the singlet peaks at 10.13 and 2.54 ppm corresponding to the aldehyde C-H and terminal CH$_3$ of the acetyl group in 3-nitrobenzaldehyde and 4-methoxyacetophenone respectively. The formation of the final product was also indicated by the fact that the measured \textlambda\textsubscript{max} value was higher than those of either starting material (322 nm vs. 270 \& 220 nm) indicating a greater degree of conjugation in the product than either of the starting materials.
+
+\subsection*{CONCLUSION}
+In this paper, the synthesis of 3'-nitrochalcone and 4-methoxy-3'-nitrochalcone has been shown. This synthesis  demonstrates a simple and effective method for the production of novel chalcone derivatives with substituents on both A and B rings. These results contribute to the existing body of knowledge on chalcone synthesis and provide a starting point for the synthesis of more structurally complex hybrid chalcones for evaluation as antimalarial candidates.
 
 %%% REFERENCES %%%
 \newpage
