--- a/chalconeproject.tex
+++ b/chalconeproject.tex
@@ -23,7 +23,7 @@
 \setlength{\parskip}{2pt}
 \setlength{\belowcaptionskip}{-8pt}
 %\captionsetup{belowskip=0pt}
-\def\citenumfont{\textit}
+\def\citenumfont{\textnormal}
 \renewcommand{\bibsection}{}
 
 \section*{Synthesis of Substituted Chalcones by Aldol Condensation: \\ A Preliminary Step in Antimalarial Drug Development}
